--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="header">
         <div class="header-content">
             <img src="images/footlocker-logo.png" alt="Foot Locker" class="logo">
-            <h1 class="title">Foot Locker - Triple shoot !</h1>
+            <h1 class="title">Foot Locker - Tt !</h1>
         </div>
         <div class="stripes-right">
             <span></span>
@@ -23,6 +23,7 @@
             <span></span>
             <span></span>
         </div>
+    
     </header>
 
     <!-- Main Content -->
