ajouts des images

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Foot Locker - Triple Shoot !</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
@@ -13,8 +13,10 @@
     <!-- Header -->
     <header class="header">
         <div class="header-content">
-            <img src="images/footlocker-logo.png" alt="Foot Locker" class="logo">
-            <h1 class="title">Foot Locker </h1>
+            <a href="index.html" class="header-link">
+                <img src="/images/logo_foot_locker.png" alt="Foot Locker" class="logo">
+                <h1 class="title">Foot Locker </h1>
+            </a>
         </div>
         <div class="stripes-right">
             <span></span>
@@ -32,10 +34,10 @@
         <section class="boxes-section">
             <div class="glow-effect"></div>
             <div class="shoe-boxes">
-                <img src="images/box-1.png" alt="Boîte Foot Locker" class="box box-1">
-                <img src="images/box-2.png" alt="Boîte Foot Locker" class="box box-2">
-                <img src="images/box-3.png" alt="Boîte Foot Locker" class="box box-3">
-                <img src="images/box-4.png" alt="Boîte Foot Locker" class="box box-4">
+               <img src="/images/boite_foot_locker.png" alt="Boîte Foot Locker" class="box box-1">
+               <img src="/images/boite_foot_locker.png" alt="Boîte Foot Locker" class="box box-2">
+               <img src="/images/boite_foot_locker.png" alt="Boîte Foot Locker" class="box box-3">
+               <img src="/images/boite_foot_locker.png" alt="Boîte Foot Locker" class="box box-4">
             </div>
         </section>
 
@@ -57,7 +59,7 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="footer-content">
-            <a href="#" class="legal-link" id="legalLink">[Mentions légales]</a>
+            <a href="mentions_légales.html" class="legal-link" id="legalLink">[Mentions légales]</a>
         </div>
         <div class="stripes-right footer-stripes">
             <span></span>
