--- a/mentions_légales.html
+++ b/mentions_légales.html
@@ -1,12 +1,40 @@
- <!-- Modal Mentions légales -->
-    <div class="modal" id="legalModal">
-        <div class="modal-content">
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mentions légales</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+     <!-- Header -->
+    <header class="header">
+        <div class="header-content">
+            <a href="index.html" class="header-link">
+                <img src="/images/logo_foot_locker.png" alt="Foot Locker" class="logo">
+                <h1 class="title">Foot Locker </h1>
+            </a>
+        </div>
+         <div class="stripes-right">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+    </header>
+    <!-- Modal Mentions légales -->
+    <div class="mentions_legales">
+        
             <button class="modal-close" id="closeLegalModal">&times;</button>
             <h2>Mentions légales</h2>
             <div class="legal-content">
-                <p>Jeu sans obligation d'achat. Réservé aux personnes majeures résidant en France métropolitaine.</p>
-                <p>Organisateur : Foot Locker Europe B.V.</p>
-                <p>Les réductions obtenues sont valables sur une sélection de produits, dans la limite des stocks disponibles.</p>
-            </div>
+                
         </div>
     </div>
+</body>
+</html>
+ 
+ 
+ 
