--- a/mentions_légales.html
+++ b/mentions_légales.html
@@ -13,7 +13,7 @@
         <div class="header-content">
             <a href="index.html" class="header-link">
                 <img src="/images/logo_foot_locker.png" alt="Foot Locker" class="logo">
-                <h1 class="title">Foot Locker </h1>
+                <h1 class="title">Foot Locker - Triple Shoot</h1>
             </a>
         </div>
          <div class="stripes-right">
