--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Foot Locker - Triple Shoot !</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
@@ -68,8 +68,7 @@
         </div>
     </footer>
 
-
-    <!-- Modal Mentions légales -->
+<!-- Modal Mentions légales -->
     <div class="modal" id="legalModal">
         <div class="modal-content">
             <button class="modal-close" id="closeLegalModal">&times;</button>
@@ -81,6 +80,7 @@
             </div>
         </div>
     </div>
+
 
 
     <script src="js/main.js"></script>
