--- a/mentions_légales.html
+++ b/mentions_légales.html
@@ -28,11 +28,33 @@
     <div class="mentions_legales">
         
             <button class="modal-close" id="closeLegalModal">&times;</button>
-            <h2>Mentions légales</h2>
+            <h1>Mentions légales</h1>
             <div class="legal-content">
-                
+                <h3>Informations Collectées</h3>
+                <p>Nous collectons les informations suivantes : prénom, nom, adresse email, et consentement à recevoir des offres promotionnelles.</p>
+                <h3>Comment nous utilisons vos informations</h3>
+                <p>Les informations collectées sont utilisées uniquement dans le cadre du jeu et pour l'envoi d'offres promotionnelles si vous y avez consenti.</p>
+                <h3>Vos droits</h3>
+                <p>Vous avez le droit d'accéder, de rectifier et de supprimer vos données personnelles. Pour exercer ces droits, veuillez nous contacter.</p>
+                <h3>Contacter Nous</h3>
+                <p>Pour toute question concernant nos mentions légales, veuillez nous contacter à l'adresse suivante :
         </div>
     </div>
+
+     <!-- Footer -->
+    <footer class="footer">
+        <div class="footer-content">
+            <a href="mentions_légales.html" class="legal-link" id="legalLink">[Mentions légales]</a>
+        </div>
+        <div class="stripes-right footer-stripes">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+    </footer>
 </body>
 </html>
  
