--- a/regles.html
+++ b/regles.html
@@ -1,4 +1,12 @@
- <!-- Modal Règles du jeu -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Règles du jeu</title>
+</head>
+<body>
+    <!-- Modal Règles du jeu -->
     <div class="modal" id="rulesModal">
         <div class="modal-content">
             <button class="modal-close" id="closeRulesModal">&times;</button>
@@ -12,3 +20,7 @@
             </div>
         </div>
     </div>
+</body>
+</html> 
+ 
+ 
