ajout du header et footer sur toute les pages

--- a/mentions_légales.html
+++ b/mentions_légales.html
@@ -1,40 +1,40 @@
- <!-- Modal Mentions légales -->
-    <div class="modal" id="legalModal">
-        <div class="modal-content">
-            <button class="modal-close" id="closeLegalModal">&times;</button>
-            <h1>Mentions légales</h1>
-            <div class="legal-content">
-                <h3>Informations Collectées</h3>
-                <p>Nous collectons les informations suivantes : prénom, nom, adresse email, et consentement à recevoir des offres promotionnelles.</p>
-                <h3>Comment nous utilisons vos informations</h3>
-                <p>Les informations collectées sont utilisées uniquement dans le cadre du jeu et pour l'envoi d'offres promotionnelles si vous y avez consenti.</p>
-                <h3>Vos droits</h3>
-                <p>Vous avez le droit d'accéder, de rectifier et de supprimer vos données personnelles. Pour exercer ces droits, veuillez nous contacter.</p>
-                <h3>Contacter Nous</h3>
-                <p>Pour toute question concernant nos mentions légales, veuillez nous contacter à l'adresse suivante :
-        </div>
-<<<<<<< HEAD
-    </div>
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mentions légales</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
 
-     <!-- Footer -->
-    <footer class="footer">
-        <div class="footer-content">
-            <a href="mentions_légales.html" class="legal-link" id="legalLink">[Mentions légales]</a>
+     <!-- Header -->
+    <header class="header">
+        <div class="header-content">
+            <a href="index.html" class="header-link">
+                <img src="/images/logo_foot_locker.png" alt="Foot Locker" class="logo">
+                <h1 class="title">Foot Locker - Triple Shoot</h1>
+            </a>
         </div>
-        <div class="stripes-right footer-stripes">
-            <span></span>
+         <div class="stripes-right">
             <span></span>
             <span></span>
             <span></span>
             <span></span>
             <span></span>
         </div>
-    </footer>
+    </header>
+    <!-- Modal Mentions légales -->
+    <div class="mentions_legales">
+        
+            <button class="modal-close" id="closeLegalModal">&times;</button>
+            <h2>Mentions légales</h2>
+            <div class="legal-content">
+                
+        </div>
+    </div>
 </body>
 </html>
  
  
  
-=======
-    </div>
->>>>>>> 182d65384387883107ef1d3e73981cf4ee431883
