--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
     <!-- Header -->
     <header class="header">
         <div class="header-content">
-            <img src="images/footlocker-logo.png" alt="Foot Locker" class="logo">
-            <h1 class="title">Foot Locker </h1>
+            <a href="index.html" class="header-link">
+                <img src="/images/logo_foot_locker.png" alt="Foot Locker" class="logo">
+                <h1 class="title">Foot Locker - Triple Shoot</h1>
+            </a>
         </div>
         <div class="stripes-right">
             <span></span>
@@ -86,4 +88,3 @@
     <script src="js/main.js"></script>
 </body>
 </html>
-
