--- a/mentions_légales.html
+++ b/mentions_légales.html
@@ -3,20 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mentions légales</title>
+    <title>Foot Locker - Mentions légales</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
-     <!-- Header -->
+    <!-- Header -->
     <header class="header">
         <div class="header-content">
             <a href="index.html" class="header-link">
                 <img src="/images/logo_foot_locker.png" alt="Foot Locker" class="logo">
-                <h1 class="title">Foot Locker - Triple Shoot</h1>
+                <h1 class="title">Mentions légales</h1>
             </a>
         </div>
-         <div class="stripes-right">
+        <div class="stripes-right">
             <span></span>
             <span></span>
             <span></span>
@@ -26,13 +29,31 @@
     </header>
     <!-- Modal Mentions légales -->
     <div class="mentions_legales">
+        <h1>Mentions Légales</h1>
+        <h3>Information Collectées</h3>
+        <p></p>
+        <h3>Comment nous utilisons vos données</h3>
+        <p></p>
+        <h3>Vos droits</h3>
+        <p></p>
+        <h3>Contacter nous</h3>
+        <p></p>
         
-            <button class="modal-close" id="closeLegalModal">&times;</button>
-            <h2>Mentions légales</h2>
-            <div class="legal-content">
-                
-        </div>
+        <a href="index.html" class="btn btn-play btn-compris">COMPRIS !</a>
     </div>
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="footer-content">
+            <a href="mentions_légales.html" class="legal-link" id="legalLink">[Mentions légales]</a>
+        </div>
+        <div class="stripes-right footer-stripes">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+    </footer>
 </body>
 </html>
  
