--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <!-- CTA Buttons -->
         <section class="cta-section">
             <button class="btn btn-play" id="playBtn">JOUER MAINTENANT !</button>
-            <button class="btn btn-rules" id="rulesBtn">RÈGLES DU JEU</button>
+            <a href="regles.html" class="btn btn-rules">RÈGLES DU JEU</a>
         </section>
     </main>
 
@@ -69,22 +69,5 @@
             <span></span>
         </div>
     </footer>
-
-
-    <!-- Modal Mentions légales -->
-    <div class="modal" id="legalModal">
-        <div class="modal-content">
-            <button class="modal-close" id="closeLegalModal">&times;</button>
-            <h2>Mentions légales</h2>
-            <div class="legal-content">
-                <p>Jeu sans obligation d'achat. Réservé aux personnes majeures résidant en France métropolitaine.</p>
-                <p>Organisateur : Foot Locker Europe B.V.</p>
-                <p>Les réductions obtenues sont valables sur une sélection de produits, dans la limite des stocks disponibles.</p>
-            </div>
-        </div>
-    </div>
-
-
-    <script src="js/main.js"></script>
 </body>
 </html>
