--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
     <header class="header">
         <div class="header-content">
             <a href="index.html" class="header-link">
-                <img src="/images/logo_foot_locker.png" alt="Foot Locker" class="logo">
+                <img src="/images/logo_foot_locker.png" alt="Footlocker-logo" class="logo">
+                </a>
                 <h1 class="title">Foot Locker - Triple Shoot</h1>
-            </a>
+            
         </div>
         <div class="stripes-right">
             <span></span>
@@ -28,8 +29,8 @@
     
     </header>
 
-    <!-- Main Content -->
-    <main class="main-content">
+    <!-- Page d'acceuil -->
+    <main class="main-page">
         <!-- Shoe Boxes Section -->
         <section class="boxes-section">
             <div class="glow-effect"></div>
@@ -43,7 +44,7 @@
 
         <!-- Game Description -->
         <section class="game-description">
-            <p class="description-text">
+            <p class="description-text" id="description-game">
                 Joue en 3 rounds et tente de remporter<br>
                 jusqu'à -50% sur la paire de ton choix !
             </p>
@@ -51,7 +52,7 @@
 
         <!-- CTA Buttons -->
         <section class="cta-section">
-            <button class="btn btn-play" id="playBtn">JOUER MAINTENANT !</button>
+            <button class="cta" id="play-now">JOUER MAINTENANT !</button>
             <a href="regles.html" class="btn btn-rules">RÈGLES DU JEU</a>
         </section>
     </main>
