--- a/mentions_légales.html
+++ b/mentions_légales.html
@@ -30,14 +30,19 @@
     <!-- Modal Mentions légales -->
     <div class="mentions_legales">
         <h1>Mentions Légales</h1>
+        <BR class="BR"></BR>
         <h3>Information Collectées</h3>
-        <p></p>
+        <BR></BR>
+        <p>Dans le cadre de votre participation au jeu instant gagnant proposé par Foot Locker, certaines informations personnelles peuvent être collectées lorsque vous remplissez le formulaire de participation. Ces données incluent notamment votre prénom, votre nom et votre adresse email, ainsi que, de manière facultative, votre pointure de chaussures ou vos identifiants de réseaux sociaux. Les informations sont recueillies uniquement lorsque vous choisissez de les fournir et sont nécessaires au bon déroulement du jeu et à l’attribution des lots.</p>
+        <BR></BR>
         <h3>Comment nous utilisons vos données</h3>
-        <p></p>
+        <BR></BR>
+        <p>Les informations collectées sont utilisées afin de permettre votre participation au jeu, de gérer les résultats et de vous envoyer votre gain par voie électronique. Elles peuvent également être utilisées, sous réserve de votre consentement, pour vous adresser des communications marketing, des offres promotionnelles ou des informations concernant les produits et services Foot Locker. Ces données permettent aussi d’améliorer l’expérience utilisateur et de mieux comprendre les attentes des participants. Foot Locker s’engage à ne pas vendre ni céder vos données personnelles à des tiers à des fins commerciales.</p>
+        <p> </p>
         <h3>Vos droits</h3>
-        <p></p>
+        <p>Conformément à la réglementation applicable en matière de protection des données personnelles, vous disposez d’un droit d’accès, de rectification et de suppression des informations vous concernant. Vous pouvez également vous opposer au traitement de vos données ou retirer votre consentement à tout moment. Ces droits peuvent être exercés dans les conditions prévues par la loi, sans justification et sans frais, en contactant Foot Locker via les coordonnées indiquées ci-dessous.</p>
         <h3>Contacter nous</h3>
-        <p></p>
+        <p>Pour toute question relative au jeu, au traitement de vos données personnelles ou à l’exercice de vos droits, vous pouvez contacter Foot Locker à l’adresse suivante : contact@footlocker.com. Toute demande sera traitée dans les meilleurs délais afin de garantir le respect de votre vie privée et de vos droits.</p>
         
         <a href="index.html" class="btn btn-play btn-compris">COMPRIS !</a>
     </div>
