--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
         <!-- CTA Buttons -->
         <section class="cta-section">
-            <button class="btn btn-play" id="playBtn">JOUER MAINTENANT !</button>
+            <a href="form.html" class="btn btn-play">JOUER MAINTENANT !</a>
             <a href="regles.html" class="btn btn-rules">RÈGLES DU JEU</a>
         </section>
     </main>
