disposition des boites

--- a/index.html
+++ b/index.html
@@ -28,19 +28,28 @@
     
     </header>
 
-    <!-- Main Content -->
-    <main class="main-content">
-        <!-- Shoe Boxes Section -->
-        <section class="boxes-section">
-            <div class="glow-effect"></div>
-            <div class="shoe-boxes">
-               <img src="/images/boite_foot_locker.png" alt="Boîte Foot Locker" class="box box-1">
-               <img src="/images/boite_foot_locker.png" alt="Boîte Foot Locker" class="box box-2">
-               <img src="/images/boite_foot_locker.png" alt="Boîte Foot Locker" class="box box-3">
-               <img src="/images/boite_foot_locker.png" alt="Boîte Foot Locker" class="box box-4">
-            </div>
-        </section>
+    <div class="scene">
+  <div class="sunburst"></div>
+  
+  <div class="box-group">
+    <div class="box back-left">
+      <img src="/images/boite_foot_locker.png" alt="Foot Locker Box">
+      <div class="shadow"></div>
+    </div>
+    
+    <div class="box back-right">
+      <img src="/images/boite_foot_locker.png" alt="Foot Locker Box">
+      <div class="shadow"></div>
+    </div>
 
+    <div class="box front-center">
+      <img src="/images/boite_foot_locker.png" alt="Foot Locker Box">
+      <div class="shadow"></div>
+    </div>
+  </div>
+</div>
+
+    <main class="main-content">
         <!-- Game Description -->
         <section class="game-description">
             <p class="description-text">
